Work in progress

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "electron": "^3.0.9",
+    "electron-builder": "^20.34.0",
     "electron-rebuild": "^1.8.2",
     "jest": "^23.6.0",
     "webpack": "^4.25.1",
